--- a/index.html
+++ b/index.html
@@ -237,14 +237,14 @@
   year={2020}
 }
 
-@article{shi2023fashionpedia-taste,
+@article{shi2023fashionpedia,
   title={Fashionpedia-Taste: A Dataset towards Explaining Human Fashion Taste},
   author={Shi, Mengyun and Belongie, Serge and Cardie, Claire},
   journal={arXiv preprint arXiv:2305.02307},
   year={2023}
 }
 
-@article{shi2023fashionpedia-ads,
+@article{shi2023fashionpedia,
   title={Fashionpedia-Ads: Do Your Favorite Advertisements Reveal Your Fashion Taste?},
   author={Shi, Mengyun and Cardie, Claire and Belongie, Serge},
   journal={arXiv preprint arXiv:2305.02360},
